@@ -1,3 +1,8 @@
+19 Jul 2003 mipsator
+ * updated STATUS
+ * fixed test/Makefile for portability.
+ * misc in pmkscan (not debugged).
+
 # snapshot 0.5.1
 
 17 Jul 2003 mipsator
